--- a/videotizame/package.json
+++ b/videotizame/package.json
@@ -2,6 +2,7 @@
   "name": "videotizame",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tita-navarro.github.io/VOD-application",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "isomorphic-fetch": "^2.2.1",
@@ -13,7 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
